--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
    <link rel="shortcut icon" href="Chanut-Role-Playing-Monster.ico" type="image/x-icon">
+    <link href="https://pk-hue.github.io/pk-projeto3.0/style.css" rel="stylesheet" />
     <title>SpaceTech</title>
 </head>
 
